# CourseWork-1

./: README.md  bun.lockb  index.html  music-store.sqlite  music-store.sqlite-shm  music-store.sqlite-wal  package.json  tsconfig.node.json  vite.config.ts
Backend/: db.json  run.sh
Frontend/: .env.development  .eslintrc.cjs  Dockerfile  bun.lockb  index.html  nginx.conf  package.json  tsconfig.node.json  vite.config.ts
Frontend/src/: App.tsx  index.scss  main.tsx
Frontend/src/components/common/: Header.scss  Header.tsx  HistoryList.scss  HistoryList.tsx  Loading.scss  Loading.tsx  MusicCard.scss  MusicCard.tsx  MusicCardList.scss  MusicCardList.tsx  MusicPlayerPanel.scss  (+5 more)
Frontend/src/dto/: HistoryRecord.ts  MusicRecord.ts  index.ts
Frontend/src/service/: api.ts  playerStore.ts
backend/: .env  .gitignore  Cargo.toml  backend
backend/migrations/: 20240309151411_tracks.sql
backend/src/: database.rs  files_processor.rs  main.rs  routes.rs
backend/src/database/: track.rs
backend/src/routes/: tracks.rs
public/: 1.m4a  2.m4a
public/music/: index.json
src/: App.css  App.tsx  api.ts  index.scss  main.tsx
src/components/: Header.tsx  MusicCard.tsx  MusicCardList.tsx  MusicPlayerModal.tsx
src/components/common/: MusicCard.scss  MusicCard.tsx  MusicCardList.tsx  MusicPlayerModal.scss  MusicPlayerModal.tsx  MusicPlayerPanel.scss  MusicPlayerPanel.tsx
src/components/main/: Header.scss  MainPage.scss  MainPage.tsx
src/dto/: MusicInfo.ts  MusicRecord.ts  index.ts
src/service/: mockApi.ts
src/store/: counterSlice.ts  hooks.ts  index.ts
(+7 files in other folders)
