[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
envy = "0.4.2"
dotenvy = "0.15.7"
actix-files = "0.6.5"
anyhow = "1"
uuid = { version = "0.7", features = ["v4", "serde"] }
env_logger = "0.11.3"
log = "0.4.21"
actix-multipart = "0.6.1"
mime = "0.3.17"
tokio = { version = "1", features = ["process"] }
futures-util = "0.3.30"
actix-cors = "0.7"
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "macros", "migrate", "sqlite"]

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
